# setup.cfg — tells Streamlit Cloud's post-install script to download the spaCy model.
# The @post-install hook is run after pip installs requirements.txt.
# Alternatively, you can add this as a startup command in Streamlit Cloud's Advanced settings:
#   python -m spacy download en_core_web_sm

[options]
# intentionally minimal — actual config is in pyproject.toml
